--- a/portafolio.html
+++ b/portafolio.html
@@ -52,13 +52,26 @@
             </ul>
             <ul class="list-projects list">
               <li class="projects-section-list-item">
-                <img class="projects-section-img"
-                src="images/tecnoduck.jpg" 
-                alt="tecnoduck" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Tecnoduck</h2>
-                <p class="projects-section-list-text">Sitio-web</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <div class="projects-overlay">
+                      <p class="text-transition">
+                        Tecnoduck es una plataforma de distribución de
+                        coronavirus de última generación. Las compañías
+                        usan esta plataforma para el espionaje digital y
+                        los ataques a los servidores seguros de la competencia.
+                      </p>
+                    </div>
+                  </div>
+                  <img class="projects-section-img"
+                  src="images/tecnoduck.jpg" 
+                  alt="tecnoduck" 
+                  width="370">
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Tecnoduck</h2>
+                    <p class="projects-section-list-text">Sitio-web</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
                 <img class="projects-section-img"
