--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
                     <button data-modal-open class="hero-section-button" type="Button">Solicite nuestro servicio</button>
                         <div class="backdrop is-hidden" data-modal>
                             <div class="modal">
-                                <button data-modal-close class="close-button">x</button>
+                                <button data-modal-close class="close-button">                        
+                                    <div class="icon-x">
+                                        <svg class = "close-button-icon">
+                                            <use href = "./images/symbol-defs.svg#icon-X" ></use>
+                                        </svg>
+                                    </div>
+                                </button>
                             </div>
                         </div>
         </section>
@@ -64,7 +70,7 @@
                         <li class="feature-section-item">
                         <div class="icon-item">
                             <svg class = "feature-icon">
-                            <use href = "./images/symbol-defs.svg#icon-antena" fill="#212121"     ></use>
+                            <use href = "./images/symbol-defs.svg#icon-antena"></use>
                             </svg>
                         </div>
                             <h3 class="feature-section-list-title">Atención a los detalles</h3>
@@ -105,30 +111,52 @@
                 <h2 class="dedication-section-title">A qué nos dedicamos</h2>
                     <ul class="list-dedication list">
                         <li class="dedication-section-item">
-                            <img class="dedication-section-img"
+                            <div class="dedication-box">
+                                <img class="dedication-section-img"
+                                src="images/programmingontablet.jpg" 
                             src="images/programmingontablet.jpg" 
+                                src="images/programmingontablet.jpg" 
+                                alt="programming on tablet" 
                             alt="programming on tablet" 
-                            width="380">
-                            <div class="box-dedication-button">
-                                <p class="text-dedication"> APLICACIONES DE ESCRITORIO</p>
+                                alt="programming on tablet" 
+                                width="370">
+                                <div class="box-dedication-button">
+                                    <p class="text-dedication"> APLICACIONES DE ESCRITORIO</p>
+                                </div>
                             </div>
                         </li>
                         <li class="dedication-section-item">
+                            <div class="dedication-box">
+                                <img class="dedication-section-img" 
                             <img class="dedication-section-img" 
+                                <img class="dedication-section-img" 
+                                src="images/comparingcellphonewithcomputer.jpg" 
                             src="images/comparingcellphonewithcomputer.jpg" 
+                                src="images/comparingcellphonewithcomputer.jpg" 
+                                alt="comparing cell phone with computer" 
                             alt="comparing cell phone with computer" 
-                            width="370">
-                            <div class="box-dedication-button">
-                                <p class="text-dedication"> APLICACIONES MÓVILES</p>
+                                alt="comparing cell phone with computer" 
+                                width="370">
+                                <div class="box-dedication-button">
+                                    <p class="text-dedication"> APLICACIONES MÓVILES</p>
+                                </div>
                             </div>
                         </li>
                         <li class="dedication-section-item">
+                            <div class="dedication-box">
+                                <img class="dedication-section-img" 
                             <img class="dedication-section-img" 
+                                <img class="dedication-section-img" 
+                                src="images/theoryofcolor.jpg" 
                             src="images/theoryofcolor.jpg" 
+                                src="images/theoryofcolor.jpg" 
+                                alt="Theory of color" 
                             alt="Theory of color" 
-                            width="370">
-                            <div class="box-dedication-button">
-                                <p class="text-dedication"> SOLUCIONES DE DISEÑO</p>
+                                alt="Theory of color" 
+                                width="370">
+                                <div class="box-dedication-button">
+                                    <p class="text-dedication"> SOLUCIONES DE DISEÑO</p>
+                                </div>
                             </div>
                         </li>
                     </ul>
