--- a/portafolio.html
+++ b/portafolio.html
@@ -72,75 +72,156 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img"
-                src="images/posterdedeportes.jpg"
-                alt="tecnoduck">
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Póster de Nueva Orleans vs Estrella Dorada</h2>
-                <p class="projects-section-list-text">Diseño</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img"
+                    src="images/posterdedeportes.jpg"
+                    alt="tecnoduck">
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Póster de Nueva Orleans vs Estrella Dorada</h2>
+                    <p class="projects-section-list-text">Diseño</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/seafood.jpg" 
-                alt="seafood" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Restaurante Seafood</h2>
-                <p class="projects-section-list-text">Aplicaciones</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/seafood.jpg" 
+                    alt="seafood" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Restaurante Seafood</h2>
+                    <p class="projects-section-list-text">Aplicaciones</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/projectprime.jpg" 
-                alt="projectprime" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Proyecto Prime</h2>
-                <p class="projects-section-list-text">Marketing</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/projectprime.jpg" 
+                    alt="projectprime" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Proyecto Prime</h2>
+                    <p class="projects-section-list-text">Marketing</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/projectcajas.jpg" 
-                alt="projectcajas" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Proyecto Cajas</h2>
-                <p class="projects-section-list-text">Aplicaciones</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/projectcajas.jpg" 
+                    alt="projectcajas" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Proyecto Cajas</h2>
+                    <p class="projects-section-list-text">Aplicaciones</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/inspiracion.jpg" 
-                alt="inspiracion" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">La inspiración no tiene límites</h2>
-                <p class="projects-section-list-text">Sitio-web</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/inspiracion.jpg" 
+                    alt="inspiracion" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">La inspiración no tiene límites</h2>
+                    <p class="projects-section-list-text">Sitio-web</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/edicion.jpg" 
-                alt="edicion" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Edición Limitada</h2>
-                <p class="projects-section-list-text">Diseño</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/edicion.jpg" 
+                    alt="edicion" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Edición Limitada</h2>
+                    <p class="projects-section-list-text">Diseño</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/projectlab.jpg" 
-                alt="projectlab" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Proyecto LAB</h2>
-                <p class="projects-section-list-text">Marketing</p>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/projectlab.jpg" 
+                    alt="projectlab" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Proyecto LAB</h2>
+                    <p class="projects-section-list-text">Marketing</p>
+                  </div>
+                </a>
               </li>
               <li class="projects-section-list-item">
-                <img class="projects-section-img" 
-                src="images/negocio.jpg" 
-                alt="negocio" >
-                <div class="projects-section-title-text">
-                <h2 class="projects-section-list-title">Negocio en Crecimiento</h2>
-                <p class="projects-section-list-text">Aplicaciones</p>
-                </div>
+                <a href target="_blank" class="projects-link">
+                  <div class="projects-thumb">
+                    <img class="projects-section-img" 
+                    src="images/negocio.jpg" 
+                    alt="negocio" >
+                    <p class="text-transition">
+                      Tecnoduck es una plataforma de distribución de
+                      coronavirus de última generación. Las compañías
+                      usan esta plataforma para el espionaje digital y
+                      los ataques a los servidores seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="projects-section-title-text">
+                    <h2 class="projects-section-list-title">Negocio en Crecimiento</h2>
+                    <p class="projects-section-list-text">Aplicaciones</p>
+                  </div>
+                </a>
               </li>
             </ul>
           </div>
