--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav class="menu-nav">
                     <a class="logo logo-header-position" href="#">Web Studio</a>
                     <ul class="menu-list list">
-                        <li class="menu-list-item"><a class="menu-list-studio" href="./index.html">Estudio</a></li>
+                        <li class="menu-list-item"><a class="menu-list-studio" href="./index.html"><span class="span-header">Estudio</span></a></li>
                         <li class="menu-list-item"><a class="menu-list-link" href="./portafolio.html">Portafolio</a></li>
                         <li class="menu-list-item"><a class="menu-list-link" href="#">Contacto</a></li>
                     </ul>
