--- a/portafolio.html
+++ b/portafolio.html
@@ -18,8 +18,8 @@
                 <nav class="menu-nav">
                     <a class="logo logo-header-position" href="#">Web Studio</a>
                     <ul class="menu-list list">
-                        <li class="menu-list-item"><a class="menu-list-link" href="./index.html">Estudio</a></li>
-                        <li class="menu-list-item"><a class="menu-list-portafolio" href="./portafolio.html">Portafolio</a></li>
+                        <li class="menu-list-item"><a class="menu-list-link" href="./index.html">Estudio</span></a></li>
+                        <li class="menu-list-item"><a class="menu-list-portafolio" href="./portafolio.html"><span class="span-header">Portafolio</span></a></li>
                         <li class="menu-list-item"><a class="menu-list-link" href="#">Contacto</a></li>
                     </ul>
                 </nav>
