--- a/portafolio.html
+++ b/portafolio.html
@@ -24,10 +24,25 @@
                     </ul>
                 </nav>
             <ul class="contact-list list">
-                <li class="contact-list-item"><a class="contact-list-link" href="#">info@devstudio.com</a></li>
-                <li class="contact-list-item"><a class="contact-list-link" href="#">+52 55 5529 6000</a></li>
+                <li class="contact-list-item"><a class="contact-list-link" href="#">
+                 <svg
+                  class="icon-envelope"
+                  width="16"
+                  height="12"
+                >
+                  <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>
+                       info@devstudio.com</a></li>
+                <li class="contact-list-item"><a class="contact-list-link" href="#">
+                 <svg
+                  class="icon-envelope"
+                  width="10"
+                  height="16"
+                >
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>+52 55 5529 6000</a></li>
             </ul>
-        </div>           
+        </div>              
     </header>
     <main>
       <section class="menu-section section">
