Listo, creo que ya

--- a/portafolio.html
+++ b/portafolio.html
@@ -67,7 +67,7 @@
             </ul>
             <ul class="list-projects list">
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link link">
                   <div class="projects-thumb">
                       <img class="projects-section-img"
                       src="images/tecnoduck.jpg" 
@@ -87,7 +87,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img"
                     src="images/posterdedeportes.jpg"
@@ -106,7 +106,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/seafood.jpg" 
@@ -125,7 +125,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/projectprime.jpg" 
@@ -144,7 +144,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/projectcajas.jpg" 
@@ -163,7 +163,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/inspiracion.jpg" 
@@ -182,7 +182,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/edicion.jpg" 
@@ -201,7 +201,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/projectlab.jpg" 
@@ -220,7 +220,7 @@
                 </a>
               </li>
               <li class="projects-section-list-item">
-                <a href target="_blank" class="projects-link">
+                <a href target="_blank" class="projects-link link">
                   <div class="projects-thumb">
                     <img class="projects-section-img" 
                     src="images/negocio.jpg" 
